@@ -38,7 +38,6 @@ import games.strategy.triplea.formatter.MyFormatter;
 import games.strategy.triplea.ui.NotificationMessages;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -905,9 +904,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<PlayerId> getPlayers() {
-    return players.isEmpty()
-        ? new ArrayList<>(Collections.singletonList((PlayerId) getAttachedTo()))
-        : players;
+    return players.isEmpty() ? new ArrayList<>(List.of((PlayerId) getAttachedTo())) : players;
   }
 
   private void resetPlayers() {
