@@ -82,9 +82,7 @@ import games.strategy.triplea.delegate.data.TechResults;
 import games.strategy.triplea.delegate.remote.IAbstractPlaceDelegate;
 import games.strategy.triplea.xml.TestMapGameData;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -364,7 +362,7 @@ class WW2V3Year41Test {
     addTo(british(gameData), transport(gameData).create(1, british(gameData)), gameData);
     final String error =
         del.placeUnits(
-            Collections.emptyList(),
+            List.of(),
             territory("United Kingdom", gameData),
             IAbstractPlaceDelegate.BidMode.NOT_BID);
     assertNull(error);
@@ -1009,7 +1007,7 @@ class WW2V3Year41Test {
             AbstractMoveDelegate.getBattleTracker(gameData).getPendingBattle(attacked);
     final List<String> steps = battle.determineStepStrings(true);
     assertEquals(
-        Arrays.asList(
+        List.of(
                 attacker + SUBS_SUBMERGE,
                 defender + SUBS_SUBMERGE,
                 attacker + SUBS_FIRE,
@@ -1051,7 +1049,7 @@ class WW2V3Year41Test {
             AbstractMoveDelegate.getBattleTracker(gameData).getPendingBattle(attacked);
     final List<String> steps = battle.determineStepStrings(true);
     assertEquals(
-        Arrays.asList(
+        List.of(
                 defender + SUBS_SUBMERGE,
                 defender + SUBS_FIRE,
                 attacker + SELECT_SUB_CASUALTIES,
@@ -1099,7 +1097,7 @@ class WW2V3Year41Test {
             AbstractMoveDelegate.getBattleTracker(gameData).getPendingBattle(attacked);
     final List<String> steps = battle.determineStepStrings(true);
     assertEquals(
-        Arrays.asList(
+        List.of(
                 attacker + SUBS_SUBMERGE,
                 attacker + SUBS_FIRE,
                 defender + SELECT_SUB_CASUALTIES,
@@ -1148,7 +1146,7 @@ class WW2V3Year41Test {
             AbstractMoveDelegate.getBattleTracker(gameData).getPendingBattle(attacked);
     final List<String> steps = battle.determineStepStrings(true);
     assertEquals(
-        Arrays.asList(
+        List.of(
                 attacker + SUBS_FIRE,
                 defender + SELECT_SUB_CASUALTIES,
                 attacker + FIRE,
@@ -1166,7 +1164,7 @@ class WW2V3Year41Test {
         invocation -> {
           final Collection<Unit> selectFrom = invocation.getArgument(0);
           return new CasualtyDetails(
-              Collections.singletonList(selectFrom.iterator().next()), new ArrayList<>(), false);
+              List.of(selectFrom.iterator().next()), new ArrayList<>(), false);
         });
     // attacking subs sneak attack and hit
     // no chance to return fire
@@ -1744,7 +1742,7 @@ class WW2V3Year41Test {
     repairs.put(repair, 1);
     String error =
         del.purchaseRepair(
-            Collections.singletonMap(
+            Map.of(
                 CollectionUtils.getMatches(germany.getUnits(), Matches.unitCanBeDamaged())
                     .iterator()
                     .next(),
@@ -1774,7 +1772,7 @@ class WW2V3Year41Test {
     repairs.put(repair, 2);
     error =
         del.purchaseRepair(
-            Collections.singletonMap(
+            Map.of(
                 CollectionUtils.getMatches(germany.getUnits(), Matches.unitCanBeDamaged())
                     .iterator()
                     .next(),
@@ -1804,7 +1802,7 @@ class WW2V3Year41Test {
     repairs.put(repair, 2);
     final String error =
         del.purchaseRepair(
-            Collections.singletonMap(
+            Map.of(
                 CollectionUtils.getMatches(germany.getUnits(), Matches.unitCanBeDamaged())
                     .iterator()
                     .next(),
